New template was implemented

--- a/sections/product-template-map.liquid
+++ b/sections/product-template-map.liquid
@@ -659,7 +659,6 @@
             </div> 
           </div>
 
-
           {% endif %}
         </div>
         <div class="reputon-trustpilot-reviews-widget" id="a83b7e60-bc57-11eb-a355-a9194acb8438" style="display: flex; justify-content: center;"></div>
@@ -1287,11 +1286,10 @@ var enable_defaul_variant = false;
 		"type": "header",
 		"content": "Desktop"
 	  },
-	  {
-        "type": "select",
+	  {   "type": "select",
         "id": "product_description",
         "label": "Product Description",
-        "default": "under_the_price",
+        "default": "under_the_timer",
           "options": [
           {
             "value": "under_the_price",
