--- a/sections/product-new-1.liquid
+++ b/sections/product-new-1.liquid
@@ -297,15 +297,15 @@
                 -moz-box-shadow: -10px 0px 5px -5px rgba(34, 60, 80, 0.07);
                 box-shadow: -10px 0px 5px -5px rgba(34, 60, 80, 0.07);
               }
-    .product.in-stock {
-      color: green;
-      padding-left: 10px;
-    }
-    .product.out-of-stock {
-      color: red;
-      padding-left: 10px;
-    }
-</style>
+      .product.in-stock {
+        color: green;
+        padding-left: 10px;
+      }
+      .product.out-of-stock {
+        color: red;
+        padding-left: 10px;
+      }
+  </style>
       
     <script>
       {% if section.settings.buy_it_now_action == 'direct_to_cart' %}var buyitnowaction = true;{% else %}var buyitnowaction = false;{% endif %}{% if section.settings.enable_related_upsell %}var relatedupsellenable = true;{% else %}var relatedupsellenable = false;{% endif %}{% if section.settings.buy_it_now_action == 'thank_you_message' %}var thankmsg = true;{% else %}var thankmsg = false;{% endif %}{% if section.settings.buy_it_now_action == 'direct_to_checkout' %}var drchkout = true;{% else %}var drchkout = false;{% endif %}
@@ -530,7 +530,7 @@
                 {%- else -%}
                   <span class="product out-of-stock">Out of stock</span>
                 {%- endif -%}
-            </p>
+              </p>
     {%- endif -%}
               {% if section.settings.product_review  %}
                 <span class="shopify-product-reviews-badge" data-id="{{ product.id }}"></span>
@@ -617,7 +617,7 @@
               <input required type="hidden" id="upsellcheckquantity" name="properties[upsellcheckquantity]">
               
               {% endform %}
-              
+  
               {%- render 'back-in-stock-form', product_id: product.id, product_variants_id: current_variant.id -%}
   
               {% if section.settings.enable_sticky %}
@@ -734,7 +734,6 @@
                 </div> 
               </div>
     
-    
               {% endif %}
             </div>
             <div class="reputon-trustpilot-reviews-widget" id="a83b7e60-bc57-11eb-a355-a9194acb8438" style="display: flex; justify-content: center;"></div>
@@ -762,7 +761,7 @@
             <div class="shipping-banner">
               <div class="shipping-banner-icon"><img src="{{'shipping-icon.png' | asset_url}}" width="45" height="45"></div>
               <div class='geotargetlygeocontent1626874543940 shipping-banner-text'>
-                <!-- Content will render here -->
+              <!-- Content will render here -->
               </div>
             </div>
   
@@ -814,6 +813,11 @@
               </div>
             </div>
   
+            <div class="banner-decorate-walls">
+              <div class="banner-decorate-walls_header">DECORATE THE WALLS OF YOUR HOME</div>
+              <div class="banner-decorate-walls_text">You can decorate the interior with puzzles and our special mounting system</div>
+            </div>
+  
             <div class="product-single__description rte" itemprop="description">
               {% for block in section.blocks %}
                 {% if block.type == 'icons-set-with-text' %}
@@ -861,8 +865,8 @@
                         <p>Check our illustration (link/popup of with an illustration of the sizes and photo of a girl). As well as the size pay attention to the assembly times:
                           <ul>
                             <li>S -> from 2 hours</li>
-                            <li>M -> from 4 hours</li>
-                            <li>L -> from 6 hours</li>
+                            <li>M-> from 4 hours</li>
+                            <li>L-> from 6 hours</li>
                           </ul>
                           <p>The large puzzle will most probably take a couple of evenings to assemble so it is best to complete it on a separate table. </p>
                   </div>
@@ -931,6 +935,7 @@
     {% endunless %}
     <!-- enable random number-->
   
+    
     <!-- READ MORE BUTTON SCRIPT AND STYLE -->
     {% if section.settings.readmore_enable %}
       {{ 'readmore.min.js' | asset_url | script_tag }}
@@ -1428,6 +1433,4 @@
           }
         ]
       }
-    {% endschema %}
-    
-    
+    {% endschema %} 
