--- a/snippets/swatch.liquid
+++ b/snippets/swatch.liquid
@@ -61,7 +61,7 @@ Set the extension of your color files below. Use 'png', 'jpeg', 'jpg' or 'gif'.
 
         {%- if product.type == 'Puzzle' -%}
         {%- assign size_count = size_count | plus: 1 -%}
-        <input id="swatch-{{ option_index }}-{{ value | handle }}-{{ section.id }}" type="radio" ga-data="{{size_count}}" name="option-{{ option_index }}" value="{{ value | escape }}"{% if forloop.first %}{% unless section.settings.enable_default_variant %} checked{% endunless %}{% endif %} {% unless variant.available %}disabled{% endunless %} />
+        <input id="swatch-{{ option_index }}-{{ value | handle }}-{{ section.id }}" type="radio" ga-data="{{size_count}}" name="option-{{ option_index }}" value="{{ value | escape }}"{% if variant.id == product.selected_or_first_available_variant.id %} checked{% endif %} {% unless variant.available %}disabled{% endunless %} />
         {% if is_color and section.settings.swatch_option == 'with_background' %}
           <label for="swatch-{{ option_index }}-{{ value | handle }}-{{ section.id }}" style="background-color: {{ value | split: ' ' | last | handle }}; background-image: url({% comment %}ly_asset_replace_for_[ value | handle | append: '.' | append: file_extension | asset_url ]_begin{% endcomment %}{% assign ly_asset = value | handle | append: '.' | append: file_extension %}{% include 'ly-asset' with ly_asset %}{{ ly_translation  }}{% comment %}ly_asset_replace_end{% endcomment %})">
             <img class="crossed-out" src="{% comment %}ly_asset_replace_for_[ 'soldout-1.png' | asset_url ]_begin{% endcomment %}{% assign ly_asset = 'soldout-1.png' %}{% include 'ly-asset' with ly_asset %}{{ ly_translation  }}{% comment %}ly_asset_replace_end{% endcomment %}" />
