Adde notification "processing" & GA4 events for back in stock popup

--- a/snippets/back-in-stock-form.liquid
+++ b/snippets/back-in-stock-form.liquid
@@ -190,6 +190,7 @@
 <script>
 $('#alertbtn').on('click',function(e){    
       e.preventDefault();
+      $('#alertbtn').text('Processing...');
         var formdata = $('#backinstock > form').serializeArray();
         var data = {};
         $(formdata ).each(function(index, obj){
@@ -206,6 +207,9 @@ $('#alertbtn').on('click',function(e){
         };
         fetch("https://tech.unidragon.com/users", requestOptions)
         .then(result => {
+            gtag('event', 'show_RS_popup', {
+                'method': 'Google'
+                });
             $('#backinstock > form').hide(); $('.backinstock__headings > h3').text('Thank you!');
             $.magnificPopup.open({
                 items: {
