--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -326,6 +326,9 @@ t.parentNode.insertBefore(y,t);y.onerror=function(){s()};
 {%- endcomment -%}
 
 {%- liquid
+  unless template == 'cart'
+    render 'coloring-book-popup'
+  endunless
 
     if settings.salepopup_position == 'bottom'
       include 'notification-popup'
