Small bugs issue Coloring Book Popup

--- a/snippets/coloring-book-popup.liquid
+++ b/snippets/coloring-book-popup.liquid
@@ -1,6 +1,5 @@
 <div id="coloring-book" class="info-popup white-popup_coloring-book mfp-hide">
-    <div style="min-width: 305px; margin: 5px 20px; margin-bottom: 25px; display: flex; flex-direction: column; align-items: center; justify-content: space-around;">
-
+    <div style="min-width: 305px; margin-bottom: 25px; display: flex; flex-direction: column; align-items: center; justify-content: space-around;">
         <div class="img">
             <img src="{{ 'coloring-book.png' | asset_url }}">
         </div>
@@ -8,16 +7,13 @@
             <p class="header">Power your creativity!</p>
             <p class="subtitle">Get free coloring sheet and make your own Majestic Wolf.</p>
         </div>
-
         <div class="coloring-book-subscribe">
             <p>Sign up and get your free PDF file for printing</p>
-                <!-- SendPulse Simple Subscription Form -->
                 <form method="">
                     <input type="email" required name="email" placeholder="Email">
                     <input type="hidden" name="sender" value="mail@m.unidragon.com">
                     <button id="subscribe-button" class="btn hero__btn">Sign up</button>
                 </form>
-                <!-- SendPulse Simple Subscription Form -->
         </div>       
     </div>
 </div>
