Size block locales added

--- a/snippets/size-block.liquid
+++ b/snippets/size-block.liquid
@@ -4,7 +4,7 @@
     <div class="grid">
       <div class="grid__item">
           <div class="rich-text__heading text-center">
-            <div class="heading">Size Chart</div>
+            <div class="heading">{{ 'custome_block.sizechart.title_block' | t }}</div>
           </div>
       </div>
     </div>
@@ -19,10 +19,10 @@
               </div>
               <div class="one-whole">
               <img loading="lazy" src="{{ 'Icons_time.svg' | asset_url }}" style="width: 23px;">
-              <div class="pp-label">Assembly time</div>
-              <div class="sm-text">From 2 hours</div>
+              <div class="pp-label">{{ 'custome_block.sizechart.assembly_time' | t }}</div>
+              <div class="sm-text">{{ 'custome_block.sizechart.time' | t: time:2 }}</div>
               <img loading="lazy" src="{{ 'Icons_pcs.svg' | asset_url }}" style="width: 23px;">
-              <div class="pp-label">Puzzle pieces</div>
+              <div class="pp-label">{{ 'custome_block.sizechart.puzle_pieces' | t }}</div>
               <div class="puzzle-pieces">97-110</div>
               <span style='font-size:20px;'>&#128527;</span>
             </div>
@@ -30,7 +30,7 @@
       <div class="grid__item large-up--one-quarter medium-down--one-whole">
           <div class="size one-whole">
             <div class="size-label">M</div>
-            <div class="bigger-text">2x bigger</div>
+            <div class="bigger-text">2x {{ 'custome_block.sizechart.bigger' | t }}</div>
           </div>
           <div class="one-whole">
             <div class="puzzle-size">≈A4</div>
@@ -38,18 +38,18 @@
           </div>
           <div class="one-whole">
           <img loading="lazy" src="{{ 'Icons_time.svg' | asset_url }}" style="width: 23px;">
-          <div class="pp-label">Assembly time</div>
-          <div class="sm-text">From 4 hours</div>
+          <div class="pp-label">{{ 'custome_block.sizechart.assembly_time' | t }}</div>
+          <div class="sm-text">{{ 'custome_block.sizechart.time' | t: time:4 }}</div>
           <img loading="lazy" src="{{ 'Icons_pcs.svg' | asset_url }}" style="width: 23px;">
-          <div class="pp-label">Puzzle pieces</div>
+          <div class="pp-label">{{ 'custome_block.sizechart.puzle_pieces' | t }}</div>
           <div class="puzzle-pieces">172-216</div>
           <span style='font-size:20px;'>&#128522;</span>
         </div>
       </div>
       <div class="grid__item large-up--one-quarter medium-down--one-whole">
         <div class="size one-whole">
-          <div class="size-label">King Size</div>
-          <div class="bigger-text">3x bigger</div>
+          <div class="size-label">{{ 'custome_block.sizechart.king_size' | t }}</div>
+          <div class="bigger-text">3x {{ 'custome_block.sizechart.bigger' | t }}</div>
         </div>
         <div class="one-whole">
           <div class="puzzle-size">≈A3</div>
@@ -57,18 +57,18 @@
         </div>
           <div class="one-whole">
           <img loading="lazy" src="{{ 'Icons_time.svg' | asset_url }}" style="width: 23px;">
-          <div class="pp-label">Assembly time</div>
-          <div class="sm-text">From 6 hours</div>
+          <div class="pp-label">{{ 'custome_block.sizechart.assembly_time' | t }}</div>
+          <div class="sm-text">{{ 'custome_block.sizechart.time' | t: time:6 }}</div>
           <img loading="lazy" src="{{ 'Icons_pcs.svg' | asset_url }}" style="width: 23px;">
-          <div class="pp-label">Puzzle pieces</div>
+          <div class="pp-label">{{ 'custome_block.sizechart.puzle_pieces' | t }}</div>
           <div class="puzzle-pieces">268-366</div>
           <span style='font-size:20px;'>&#128523;</span>
         </div>
       </div>
       <div class="grid__item large-up--one-quarter medium-down--one-whole">
         <div class="size one-whole">
-          <div class="size-label">Royal Size</div>
-          <div class="bigger-text">7x bigger</div>
+          <div class="size-label">{{ 'custome_block.sizechart.royal_size' | t }}</div>
+          <div class="bigger-text">7x {{ 'custome_block.sizechart.bigger' | t }}</div>
         </div>
         <div class="one-whole">
           <div class="puzzle-size">≈A2</div>
@@ -76,10 +76,10 @@
         </div>
           <div class="one-whole">
           <img loading="lazy" src="{{ 'Icons_time.svg' | asset_url }}" style="width: 23px;">
-          <div class="pp-label">Assembly time</div>
-          <div class="sm-text">From 10 hours</div>
+          <div class="pp-label">{{ 'custome_block.sizechart.assembly_time' | t }}</div>
+          <div class="sm-text">{{ 'custome_block.sizechart.time' | t: time:10 }}</div>
           <img loading="lazy" src="{{ 'Icons_pcs.svg' | asset_url }}" style="width: 23px;">
-          <div class="pp-label">Puzzle pieces</div>
+          <div class="pp-label">{{ 'custome_block.sizechart.puzle_pieces' | t }}</div>
           <div class="puzzle-pieces">530-737</div>
           <span style='font-size:20px;'>&#128526;</span>
         </div>
