--- a/sections/product-giftcart-template.liquid
+++ b/sections/product-giftcart-template.liquid
@@ -236,7 +236,12 @@
             {% if section.settings.product_review  %}
             <span class="shopify-product-reviews-badge" data-id="{{ product.id }}"></span>
             {% endif %}
-            
+            <style>
+              html .gs-buttons.gs-big-counter.gs-small>.gs-big-counter {
+                font-size: 32px !important;
+              }
+            </style>
+            {% include 'getsocial-inline-bar' %}
             {%- capture "form_classes" -%}
             product-form product-form-{{ section.id }}{% unless section.settings.show_variant_labels %} product-form--hide-variant-labels{% endunless %}{% if section.settings.enable_payment_button and product.has_only_default_variant%} product-form--payment-button-no-variants{% endif %}
             {%- endcapture %}
