Added new button

--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -397,7 +397,7 @@
         text-transform: uppercase;
         width: 100%;
         height: 40px;
-        margin-top: 12px;
+        margin-top: 10px;
         font-size: 11pt;
         font-weight: bold;
         border-width: 2px;
@@ -525,7 +525,7 @@
               text-decoration: revert;
           }
         @media only screen and (min-width: 740px) {
-               .mount__text, .mount__text p {
+               .mount__text p {
                 text-align: left;
                 margin: 20px 0;
                 color: #595959;
@@ -582,6 +582,11 @@
         @media only screen and (min-width: 980px){
             .mount__step-captions {
                 padding: 40px 50px;
+            }
+        }
+        @media only screen and (max-width: 740px) {
+            .grid__item.medium-up--one-third.mount__text.text-left {
+            padding-left: 0;
             }
         }
       </style>
@@ -818,7 +823,9 @@
                         </figure>
                     </div>
                 </div>
-            <div class="grid__item medium-up--one-third mount__text text-left" style="padding-bottom: 10px;"><p>Now you can easily turn your puzzle into a piece of interior decor for the home, office, or just about anywhere.</p>
+            <div class="grid__item medium-up--one-third mount__text text-left">
+                <button class="upsell-description upsell-button btn" style="border: none;">{{ 'products.upsell.add_to_cart_button_text' | t }}</button>
+                <p style="padding-top: 10px;">Now you can easily turn your puzzle into a piece of interior decor for the home, office, or just about anywhere.</p>
                 <p>The kit includes:</p>
                 <ul>
                 <li>A cardboard base for turning the puzzle over;</li>
@@ -880,6 +887,7 @@
         .then(response => {
             //console.log(response.json());
             goCart.fetchAndOpenCart();
+            $('.mfp-close').click();
             $('.go-cart-drawer-upsell').hide();
             $('.upsell-info').hide();
         })
