--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -376,7 +376,9 @@
       cursor: pointer;
       font-weight: 600;
     }
-
+    .getsocial.gs-inline-group.gs-big-counter {
+        margin-bottom: 5px !important;
+    }
 
 </style>
     
@@ -513,8 +515,8 @@
           {%- if product.metafields.link.customer-review-photo -%}
             {%- render 'customer-review-photo' with product -%}
           {%- endif -%}
+          {%- include 'getsocial-inline-bar' -%}
     </div>
-      
       <div class="grid__item medium-up--one-half">
         <div class="product-single__meta">
           <h1 itemprop="name" class="product-single__title heading">
@@ -613,7 +615,7 @@
                 font-size: 32px !important;
               }
             </style>
-            {% include 'getsocial-inline-bar' %}           
+                       
             {%- capture "form_classes" -%}
             product-form product-form-{{ section.id }}{% unless section.settings.show_variant_labels %} product-form--hide-variant-labels{% endunless %}{% if section.settings.enable_payment_button and product.has_only_default_variant%} product-form--payment-button-no-variants{% endif %}
             {%- endcapture %}
@@ -689,7 +691,6 @@
             {% endif %} 
           {% endif %} 
           <!-- END PRODUCT SWATCH CODE IF ENABLE -->
-            
             {% include 'product-page-features' %}
 
             <input required type="hidden" id="upsellcheckquantity" name="properties[upsellcheckquantity]">
@@ -814,7 +815,7 @@
   
             {% endif %}
           </div>
-
+          
           <div class="reputon-trustpilot-reviews-widget" id="a83b7e60-bc57-11eb-a355-a9194acb8438" style="display: flex; justify-content: center;"></div>
           {%- unless product.title contains "balancing" -%}
             {% render 'pdp__discount' %}
